k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rmg-platform-service
  namespace: default
  labels:
    app: rmg-platform
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: rmg-platform
